test/files/pos/t7461/Test_2.scala
class C {
  def foo = Macros.foo
}