test/files/neg/bug1548/S.scala
class ScalaClass extends javapkg.J {
  override def defaultMethod = "Boo!"
}
